[gd_scene load_steps=3 format=3 uid="uid://dpc8qa00yqwrs"]

[ext_resource type="Texture2D" uid="uid://bwsg8be7ife7b" path="res://ui/sprites/twitch_user_profile_pic.png" id="1_kgbgf"]
[ext_resource type="Script" uid="uid://b5r6qu61ghn1y" path="res://instances/pnl_twitch_user_info.gd" id="1_obwb5"]

[node name="pnl_twitch_user_info" type="PanelContainer"]
script = ExtResource("1_obwb5")

[node name="hb" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="tex_profile_pic" type="TextureRect" parent="hb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture = ExtResource("1_kgbgf")
expand_mode = 2
stretch_mode = 5

[node name="vb" type="VBoxContainer" parent="hb"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ln_username" type="LineEdit" parent="hb/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "username"
editable = false

[node name="ln_display_name" type="LineEdit" parent="hb/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "display name"
editable = false

[node name="ln_user_id" type="LineEdit" parent="hb/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "user id"
editable = false

[node name="ln_profile_picture_url" type="LineEdit" parent="hb/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "profile picture url"
editable = false

[node name="hb" type="HBoxContainer" parent="hb/vb"]
layout_mode = 2

[node name="lb" type="Label" parent="hb/vb/hb"]
layout_mode = 2
text = "Twich chat colour"

[node name="cr_user_twitch_irc_color" type="ColorRect" parent="hb/vb/hb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)
